# DataStructureAssignments

./: .gitignore  README.md
A1_Sorting/: Makefile  README.md  install_dependencies.sh  postprocess.py
A1_Sorting/lib/: CMakeLists.txt
A1_Sorting/lib/include/: sorter.hpp
A1_Sorting/lib/src/: sorter.cpp
A1_Sorting/main/: CMakeLists.txt
A1_Sorting/main/src/: main.cpp  somefile.cpp
A1_Sorting/tester_lib/: CMakeLists.txt
A1_Sorting/tester_lib/include/: common_utils.hpp  correctness_tester.hpp  failure_logger.hpp  load_tester.hpp  sorting_wrappers.hpp  testcase_generator.hpp
A1_Sorting/tester_lib/src/: correctness_tester.cpp  load_tester.cpp  testcase_generator.cpp
setup/scripts/commons/: common.sh
setup/scripts/docker_dev/: build_dockerfile.sh
setup/scripts/vscode/: mac_setup_vs_code.sh
